# Zephyr

./: CMakeLists.txt  README.md  main.cpp  shader.fs  shader.vs
.github/workflows/: cmake-multi-platform.yml
include/: __head.h
include/animation/easing/: Easing.hpp  Interpolation.hpp
include/animation/easing/function/: Back.hpp  Bounce.hpp  Circ.hpp  Cubic.hpp  Elastic.hpp  Expo.hpp  Linear.hpp  Quad.hpp  Quart.hpp  Quint.hpp  Sine.hpp
include/core/: Core.hpp
include/gl/: Buffer.hpp  Program.hpp  Shader.hpp  Texture.hpp  Type.hpp  Uniform.hpp  Utils.hpp  VertexArray.hpp
include/glfw/: Window.hpp
include/graphics/: Color.hpp  Colorable.hpp  Drawable.hpp  Image.hpp  Pipeline.hpp  Projector.hpp  Sprite.hpp  Text.hpp  Texture.hpp  Transformable.hpp  Window.hpp
include/graphics/font/: Char.hpp  Font.hpp
include/graphics/pipeline/: SpritePipeline.hpp
include/graphics/projector/: OrthographicProjector.hpp
include/graphics/sprite/: BaseSprite.hpp  DynamicSprite.hpp  StaticSprite.hpp  StreamSprite.hpp
include/input/: Joystick.hpp  Keyboard.hpp  Mouse.hpp
include/math/: angle.hpp  math.hpp  matrix.hpp  rect.hpp  swizzle.hpp  vector.hpp  vector.inl  vector1.hpp  vector1.inl  vector2.hpp  vector2.inl  vector3.hpp  vector3.inl  vector4.hpp  vector4.inl  vectormeta.hpp  vectorutils.hpp
include/registry/: Fonts.hpp  Pipelines.hpp  Registries.hpp  Registry.hpp  RegistryKey.hpp
include/utils/: Chunk.hpp  Clip.hpp  Debug.hpp  Program.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp  VertexData.hpp
resources/: project.json
resources/assets/zephyr/font/: default.json
resources/assets/zephyr/pipeline/: sprite.json
resources/assets/zephyr/shader/: simple.fs  simple.vs  sprite.fs  sprite.vs
src/: __head.cpp
src/animation/easing/: Easing.cpp
src/animation/easing/function/: Back.cpp  Bounce.cpp  Circ.cpp  Cubic.cpp  Elastic.cpp  Expo.cpp  Linear.cpp  Quad.cpp  Quart.cpp  Quint.cpp  Sine.cpp
src/core/: Core.cpp
src/gl/: Buffer.cpp  Program.cpp  Shader.cpp  Texture.cpp  Type.cpp  Uniform.cpp  VertexArray.cpp  dum.cpp
src/glfw/: Window.cpp
src/graphics/: Colorable.cpp  Image.cpp  Pipeline.cpp  Sprite.cpp  Text.cpp  Texture.cpp  Transformable.cpp  Window.cpp
src/graphics/font/: Font.cpp
src/graphics/pipeline/: SpritePipeline.cpp
src/graphics/projector/: OrthographicProjector.cpp
src/graphics/sprite/: BaseSprite.cpp  DynamicSprite.cpp  StaticSprite.cpp  StreamSprite.cpp
src/input/: Keyboard.cpp
src/registry/: Fonts.cpp  Pipelines.cpp  Registries.cpp  RegistryKey.cpp
src/utils/: Chunk.cpp  Clip.cpp  Debug.cpp  Program.cpp  Shader.cpp  Texture.cpp
